--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "nodemon": "^2.0.14"
   },
   "devDependencies": {},
   "scripts": {
