--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dns": "^0.2.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "mongoose": "^6.0.14",
+    "multer": "^1.4.3",
+    "nodemon": "^2.0.14",
+    "os": "^0.1.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {},
   "scripts": {
