--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dns": "^0.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.6.0",
+    "firebase-tools": "^9.23.0",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3",
     "nodemon": "^2.0.14",
