--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "dns": "^0.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "firebase": "^9.6.0",
-    "firebase-tools": "^9.23.0",
+    "firebase": "^9.6.1",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3",
     "nodemon": "^2.0.14",
     "os": "^0.1.2",
+    "pip": "0.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {},
