--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dns": "^0.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "firebase": "^9.6.1",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
     "os": "^0.1.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pip": "0.0.1",
     "url": "^0.11.0"
   },
