--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "firebase": "^9.6.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3",
@@ -21,7 +20,7 @@
     "os": "^0.1.2",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "pip": "0.0.1",
+    "pug": "^3.0.2",
     "url": "^0.11.0"
   },
   "devDependencies": {},
